--- a/src/BeeFee/UI/WebApplication3/ticket.html
+++ b/src/BeeFee/UI/WebApplication3/ticket.html
@@ -1,6 +1,7 @@
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1251"><meta content="\&quot;text/html;" charset="utf-8\&quot;" http-equiv="\&quot;Content-Type\&quot;"></head>
+<!DOCTYPE html>
+<html><head><meta content="text/html" charset="utf-8" http-equiv="Content-Type">
     
-    <head><style>
+    <style>
     .container {
     margin: 0 auto;
     padding: 0 32px;
@@ -136,7 +137,7 @@ body {
 			</div>
     </div>
 	<div style="margin: 20px;">
-    <h2>Билет на {{event}}</h2>
-	<table><tbody><tr><td>Имя: {{name}}</td></tr><tr><td>Даты: {{date}}</td></tr></tbody></table>
+		<h2>Р‘РёР»РµС‚ РЅР° {{event}}</h2>
+	<table><tbody><tr><td>РРјСЏ: {{name}}</td></tr><tr><td>Р”Р°С‚С‹: {{date}}</td></tr></tbody></table>
 	</div>
 	</body></html>
